# data-generator

./: .gitignore  README.md  example.py  inference.py  main.py  pyproject.toml  pyrightconfig.json  train.py
r49/: README.md  __init__.py  image_transform.py  manifest.py  r49_dataloaders.py  r49_dataset.py  r49_file.py
