[project]
name = "data-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "fastai>=2.8.5",
    "matplotlib>=3.10.7",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "onnxscript>=0.5.6",
    "opencv-contrib-python>=4.12.0.88",
    "pydantic>=2.12.5",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
